--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "terminal.explorerKind": "integrated"
+    "terminal.explorerKind": "integrated",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
